--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "smart-coders-js",
+  "name": "smart-coders-js-2",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://19alexandr80.github.io/smart-coders-js",
+  "homepage": "https://19alexandr80.github.io/smart-coders-js-2",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /smart-coders-js/"
+    "build": "parcel build src/*.html --public-url /smart-coders-js-2/"
   },
   "repository": {
     "type": "git",
